# art-in-humanitys-code

./: README.md
dataset/: clean_duplicates.py  find_duplicates.py  readme.md
mining/: README.md
mining/swh-repo-mining/: .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE.txt  README.md
mining/swh-repo-mining/doc/: classifier-miner-spec.md
mining/swh-repo-mining/src/: export_readmes.rs  file_finder.rs  lib.rs  repo_classifier_miner.rs
mining/swh-repo-mining/tests/: export_readmes.rs  find_files.rs  repo_classifier_miner.rs
rq1/: count_art_envs.py  forks.py  others_origins.json  readme.md  rq1_plots.ipynb
rq1/check_status_of_urls/: remove_none_live_status.py  sourceforge_ping.py  update_url_status.py
rq2/: readme.md
rq2/scripts/: geolocations.py  locationIndex_script.js  mine-art-metadata.py  reverse_geolocations.py  sample_selection.py
rq3/: prompt.py  readme.md  run_predictions.py  start-qwen3.sh
rq3/data/: 74_examples_manual_classification.json  gen-art-classification.md  manual_annotation_50.json  p5_libraries.txt  readme.md
rq3/manually_labelled_examples/: 74_examples_manual_classification.json
rq3/scripts/: plot_4_quadrants_fig7c.py  plot_entities_label_prediction_fig7a.py  plot_libraries_assets_venn_diagram_fig7b.py  process_predictions.py  prompt.py  random_p5_repos.py  utils.py
rq4/: readme.md  top42.py
rq4/data/: 42-contributors.xlsx
rq4/scripts/: contributors_plots.py
