[package]
name = "swh-repo-mining"
version = "0.2.0"
edition = "2021"

[features]
deprecated-binaries = []  # build old, deprecated binaries

[[bin]]
name = "export-readmes"
required-features = ["deprecated-binaries"]

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
chrono = "= 0.4.39"
clap = { version = "4.1.6", features = ["derive"] }
dataset-writer = "2.0.0"
dsi-progress-logger = "0.8.0"
env_logger = "0.11.7"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
# swh-graph = { path = "../swh-graph/rust" }
swh-graph = { version = "6.7.0", features = ["serde"] }
# swh-graph = { git = "https://gitlab.softwareheritage.org/swh/devel/swh-graph", rev = "8840f5a20ab27bcf12cc0bd4b9019c8195684842" }

[dev-dependencies]
subprocess = "0.2.9"
tempfile = "3"
